- Fixed bug: scrollOverflow not 100% width if "flex" + "align-items:center" used on section #4717

--- a/src/css/fullpage.css
+++ b/src/css/fullpage.css
@@ -1,5 +1,5 @@
 /*!
- * fullPage 4.0.37
+ * fullPage 4.0.38
  * https://github.com/alvarotrigo/fullPage.js
  *
  * @license GPLv3 for open source use only
@@ -242,6 +242,7 @@ html.fp-enabled,
 /* Disabling vertical centering on scrollable elements */
 .fp-overflow{
     justify-content: flex-start;
+    width: 100dvw; /* In case its necessary #4717 */
 }
 
 body:not(.fp-responsive) .fp-overflow{
